Created better build with laravel elixir

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <body>
 
         <ul>
-            <update v-for="model in models" :model="model"></update>
+            <update v-for="model in models" url="/test" :model="model"></update>
         </ul>
 
         <create url="/test"></create>
-        <script src="dist/build.js"></script>
+        <script src="dist/js/build.js"></script>
     </body>
 </html>
